ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
spec:
  tls:
  - hosts:
    - frontend.local
    - backend.local
    secretName: tls-secret
  rules:
  - host: frontend.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: frontend-service
            port: 
              number: 80
      
  - host: backend.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8083
